test/soft-contract/ill-typed/last.caprice
(* TEST
  include refutable;
*)

(* type error is that list can be empty and has no last. An `is_nonempty` predicate fixes it. *)

(* y combinator *)
let Y f =
  fun y ->
    (fun x -> f (fun z -> (x x) z))
    (fun x -> f (fun z -> (x x) z))
    y

let last (type a') (l : list a') : a' =
  Y (
    fun self x ->
      match x with
      | x :: [] -> x
      | _ :: xs -> self xs
      end
      (* ERROR : `l` could be empty *)
  ) l
